--- a/publish/common/css/common.css
+++ b/publish/common/css/common.css
@@ -1,46 +1,5 @@
 @charset "utf-8";
 
-/* 메인폰트 */
-@font-face {
-    font-family: 'GmarketSansMedium';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'GmarketSansBold';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-/* 서브폰트 */
-@font-face {
-    font-family: 'IBMPlexSansKR-Medium';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/IBMPlexSansKR-Medium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'IBMPlexSansKR-Bold';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/IBMPlexSansKR-Bold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-/* 추가 리셋 */
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'GmarketSansMedium';
-}
-a {text-decoration: none; color: #2b2b2b;}
-ul,li {list-style: none;}
-#m_menu{display: none;}
-
 /* header */
 header{
     width: 100%;
@@ -58,16 +17,15 @@ header{
     width: 100%;
     height: 40px;
     border: 1px solid #b6b6b6;
+    border-left:none;
+    border-right:none;
 }
 #header_b {
     width: 100%;
     max-width: 1000px;
     height: 40px;
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    position: relative;
     margin: 0 auto; 
+    position: relative;
 }
 
 
@@ -82,7 +40,7 @@ header{
     width: 100%;
     height: 100%;
     display: inline-block;
-    background: url(../img/logo_1e70ff.svg) no-repeat 0 0;
+    background: url(../img/logo.svg) no-repeat 0 0;
     background-size: 100% 100%;
 }
 
@@ -90,21 +48,18 @@ header{
 .search{
     width: 40%;
     height: 28px;
-    border-bottom: 2px solid #b6b6b6;
-    display: flex;
-    justify-content: space-around;
+    border-bottom: 2px solid #969696;
 }
-.search>a{
+.search_icon{
     width: 30px;
     height: 100%;
     display: inline-block;
+    cursor: pointer;
 }
-.search>a>i{
-    width: 100%;
-    height: 100%;
+.search_icon>i{
+    color: #969696;
     display: inline-block;
-    background: url('../img/sprite_5.png') no-repeat -165px -43px;
-    border: none;
+    width: 100%;
 }
 .search #top_search{
     width: 80%;
@@ -113,8 +68,9 @@ header{
     outline: none;
     border: none;
     font-size: 1rem;
-    color: #8d8e91;
-    text-align: center;
+}
+::placeholder{
+    color: #b6b6b6;
 }
 
 /* 유틸메뉴 */
@@ -148,83 +104,78 @@ header{
     color: #2b2b2b;
 }
 
-/* 카테고리 */
-#header_b>div,
-#header_b>ul{
-    width: 20%;
-    transition: ease .3s;
-}
-#header_b>div a,
-#header_b>ul span{
-    display: inline-block;
+
+/* 카테고리 버튼 .top_btn*/
+.top_btn{
     width: 100%;
     height: 100%;
-    line-height: 2.5rem;
-    font-size: 1.1rem;
-    transition: ease .3s;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.top_btn>a{
+    width: 20%;
+    display: inline-block;
+    height: 100%;
     border-left: 1px solid #b6b6b6;
     border-right: 1px solid #b6b6b6;
     border-radius: 3px;
-    font-family: 'GmarketSansMedium';
-    cursor: pointer;
+    text-align: center;
+    line-height: 2.5rem;
+    font-size: 1.2rem;
 }
-.category{
-    transition: ease .3s;
-    opacity: 1;
+.top_btn>a>i{
+    padding:0 3%;
 }
 .sell_btn{
     background-color: #4e53e4;
     color: #ffffff;
 }
-.sell_btn>i{
-    padding: 0 5%;
-}
-
-/* 카테고리/판매등록 후버 */
 .sell_btn:hover{
     color: #2b2b2b;
     background-color: #f3f3f3;
 }
-.category>li:hover .cate_btn{
+.cate_btn:hover{
     background-color: #f3f3f3;
 }
-.category>li:hover .sub {
-    display: grid;
-    grid-template-columns: repeat(10,1fr);
-    grid-auto-flow: dense;
-    height: 500%;
-    opacity: 1;
-    overflow: visible;
-    transition: ease-in-out .3s;
-}
 
-/* 카테고리 옵션 */
-.category .sub{
-    display: inline-block;
+
+/* 카테고리 메뉴 .gnb */
+.gnb{
+    position:absolute; 
     width: 100%;
-    height: 0;
-    padding: 2%;
-    position: absolute;
-    top: 100%; right: 0;
-    background-color: #F3F3F3;
-    z-index: 100;
-    font-family: 'GmarketSansMedium';
-    display: none;
-    overflow: hidden;
-    opacity: 0;
+    height:230px;
+    top:99%; right:0px; 
+    z-index: 30;
+}
+.sub{
+    display: grid;
+    grid-template-columns: repeat(13,1fr);
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+    line-height: 2rem;
+    background-color: #f3f3f3;
+    padding: 3.5% 0;
+}
+.sub>li{
+    width: 100%;
+    height: 100%;
+    line-height: 2rem;
 }
 .sub>li>a {
-    display: inline-block;
+    display: block;
     width: 100%;
-    padding: 3%;
+    line-height: 2rem;
     font-size: .8rem;
     text-align: center;
     color: #b6b6b6;
+    word-break: keep-all;
 }
-
 .sub>li>a>i {
     display: block;
-    margin: auto;
+    margin: 0 auto;
     width: 35px;
     height: 33px;
     background-image: url('../img/sprite_5.png');
@@ -284,48 +235,58 @@ i.sub_menu13 {
     background-position: -437px -82px;
 }
 
-.sub_bottom {
+.sub_bottom{
+    height: 2px;
     width: 100%;
-    height: 0;
     position: absolute;
-    bottom: -12%; right: 0;
-    background-color: #ffffff;
-    line-height: 3rem;
-    overflow: hidden;
+    left: 50%; 
+    transform: translateX(-50%);
     opacity: 0;
+    display: none;
+    overflow: hidden;
+    background-color: #b6b6b6;
+    transition: ease-in-out;
+    transition-duration: 1s;
 }
-.sub_bottom li{
+.sub_bottom>li{
+    width: 100%;
+    height: 100%;
     display: inline-block;
 }
-.sub_bottom li>a{
+.sub_bottom>li>a{
     width: 100%;
-    padding: 0 5vw 0 0;
-    font-size: .8em;
-}
-
-.sub>li:hover a{
-    color: #2b2b2b;
+    height: 100%;
+    display: inline-block;
+    text-align: center;
+    /* line-height: 2rem; */
 }
 .sub>li:hover .sub_bottom{
-    height: 50px;
     overflow: visible;
-    opacity: 1;
-    transition: ease-in .3s;
+    opacity: 1;  
+    display: block;
 }
+.sub>li:hover a{
+    color: #6f6e6e;
+    font-family: 'GmarketSansMedium';
+}
+
+
 
 
 /* 배너 슬라이드 */
 #slider{
     width: 100%;
     max-width: 1000px;
-    height: 200px;
-    margin: 1.5% auto 2% auto;
+    height: 210px;
+    margin: 1% auto;
     position: relative;
     overflow: hidden;
+    padding: 0 1%;
+    z-index: -1;
 }
 .img_box{
-    width: 300%;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     position: relative;
     display: flex;
 }
@@ -333,27 +294,21 @@ i.sub_menu13 {
     width: 100%;
     max-width: 1000px;
     height: 100%;
-    background-color: #f3f3f3;
-}
+    position: absolute;
+    top: 0; left: 0;
+    opacity:0; 
+    transition-duration:0.8s;  transition-delay:0.1s; 
+    transition-timing-function:ease-in;
+}    
+.img_box li.on { opacity:1; left:0px; }
 .img_box li img{
     display: block;
     width: 100%;
     height: 100%;
-    padding: 3%;
-}
-.img_box li h3{
-    position: absolute;
-    font-size: .8rem;
-    color: #6f6e6e;
-    bottom: 3%; left: 24.5%;
-    font-family: 'IBMPlexSansKR-Medium';
-    text-align: right;
-    width: max-content;
-    word-break: keep-all;
 }
 .img_btn{
     position:absolute;
-    top: 92%;
+    top: 85%;
     width:100%;
     z-index: 10;
 } 
@@ -401,8 +356,10 @@ i.sub_menu13 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: flex-start;
 }
 .main_con{
+    display: none;
     font-family: 'GmarketSansMedium';
 }
 .item_wrapper>a.item_list{
@@ -419,7 +376,7 @@ i.sub_menu13 {
     height: 100%;
     max-height: 232px;
     border-radius: 3%;
-    border: 1px solid #b6b6b6;
+    border: .5px solid #b6b6b6;
 }
 .dealer_position{
     width: 30%;
@@ -428,6 +385,7 @@ i.sub_menu13 {
 }
 .dealer_position>img{
     width: 100%;
+    opacity: .8;
 }
 .cont,
 .cont_bid{
@@ -439,6 +397,7 @@ i.sub_menu13 {
     flex-direction: column;
     color: #464646;
     position: relative;
+    padding: 2% 0;
 }
 .item_title{
     width: 100%;
@@ -452,7 +411,8 @@ i.sub_menu13 {
     font-size: .8rem;
 }
 .item_price_before{
-    font-family: 'IBMPlexSansKR-Medium';
+    font-family: 'IBMPlexSansKR-Bold';
+    font-weight: normal;
 }
 .item_price>strong{
     display: inline-block;
@@ -464,9 +424,8 @@ i.sub_menu13 {
 
 .bid_time{
     width: 100%;
-    max-width: 232px;
     position: absolute;
-    top: -43%; left: 0;
+    top: -40%; left: 0;
     background-color: #4147e1;
     border-radius: 0 0 5px 5px;
     font-family: 'GmarketSansMedium';
@@ -488,33 +447,34 @@ i.sub_menu13 {
 }
 
 /* 더보기 */
-.paging{
-    text-align: center;
-    width: 100%;
-    padding: 3% 0;
-    font-family: 'GmarketSansMedium';
-}
-.more_wrap{
+.more_load{
     width: 25%;
     margin: 0 auto;
+    padding: 4% 0;
+    font-family: 'GmarketSansMedium';
+    transition: all 600ms ease-in-out;
+    -webkit-transition: all 600ms ease-in-out;
+    -moz-transition: all 600ms ease-in-out;
+    -o-transition: all 600ms ease-in-out;
 }
-.more_wrap>a{
+.more_load>a{
     display: inline-block;
     width: 100%;
-    line-height: 2.2rem;
+    text-align: center;
+    line-height: 2rem;
     background-color: #4147e1;
     color: #fff;
     border: 2px solid #4147e1;
     border-radius: 10px;
     transition: ease .3s;
 }
-.more_wrap>a>i{
+.more_load>a>i{
     display: inline-block;
     padding: 0 2%;
     text-align: center;
     line-height: 0rem;
 }
-.more_wrap>a:hover {
+.more_load>a:hover {
     background-color: #f3f3f3;
     color: #4147e1;
     border: 2px solid #4147e1;
@@ -595,183 +555,11 @@ i.sub_menu13 {
     display: block;
     text-align: center;
     color: #6f6e6e;
+    padding: 5px;
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-/* 모바일용 */
-@media(min-width:320px) and (max-width:510px) {
-
-    #header_a{justify-content: center;}
-    #header_a>a{width:0; display: none;}
-    .search{width: 90%;}
-    .top_gnb{display: none;}
-    #header_b{display: none;}
-    .wrap{display:none;}
-
-    /* 320 메뉴바 */
-    #m_menu {
-        width: 100%;
-        min-width: 320px;
-        padding: 5px 2%;
-        background-color: #F3F3F3;
-        display: flex;
-        justify-content: space-around;
-        position: fixed;
-        bottom: 0;
-        display: none;
-    }
-
-    #m_menu>li>a {
-        width: 100%;
-        height: 28px;
-    }
-
-    #m_menu>li>a>i {
-        width: 25px;
-        height: 28px;
-        display: inline-block;
-        background-image: url('../img/sprite_5.png');
-        background-repeat: no-repeat;
-    }
-
-    i.m_home {
-        background-position: -198px -40px;
-    }
-
-    i.m_category {
-        background-position: -228px -40px;
-    }
-
-    i.m_plus {
-        background-position: -257px -40px;
-    }
-
-    i.m_mymenu {
-        background-position: -297px -40px;
-
-    }
-
-    .m_sub {
-        width: 100%;
-        padding: 3%;
-        position: absolute;
-        bottom: 30px;
-        right: 0;
-        background-color: #F3F3F3;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-    }
-
-    .m_sub>li>a {
-        display: inline-block;
-        width: 100%;
-        padding: 5%;
-        font-size: .5rem;
-        text-align: center;
-    }
-
-    .m_sub>li>a>i {
-        display: block;
-        margin: auto;
-        width: 35px;
-        height: 33px;
-        background-image: url('../img/sprite_5.png');
-        background-repeat: no-repeat;
-    }
-
-    i.m_sub_menu1 {
-        background-position: 0 -81px;
-    }
-
-    i.m_sub_menu2 {
-        background-position: -37px -82px;
-    }
-
-    i.m_sub_menu3 {
-        background-position: -72px -82px;
-    }
-
-    i.m_sub_menu4 {
-        background-position: -109px -82px;
-    }
-
-    i.m_sub_menu5 {
-        background-position: -148px -82px;
-    }
-
-    i.m_sub_menu6 {
-        background-position: -186px -82px;
-    }
-
-    i.m_sub_menu7 {
-        background-position: -219px -82px;
-    }
-
-    i.m_sub_menu8 {
-        background-position: -255px -82px;
-    }
-
-    i.m_sub_menu9 {
-        background-position: -288px -82px;
-    }
-
-    .m_sub>li>a>i.m_sub_menu10 {
-        width: 48px;
-        background-position: -323px -82px;
-    }
-
-    i.m_sub_menu11 {
-        background-position: -369px -82px;
-    }
-
-    i.m_sub_menu12 {
-        background-position: -399px -82px;
-    }
-
-    i.m_sub_menu13 {
-        background-position: -437px -82px;
-    }
-
-    .m_sub ul {
-        width: 100%;
-        height: 0;
-        padding-bottom: 30px;
-        position: absolute;
-        bottom: 0; right: 0;
-        background-color: #ffffff;
-        display: none;
-    }
-    .m_sub ul>li{
-        display: inline-block;
-    }
-    .m_sub ul>li>a{
-        width: 100%;
-        padding: 0 10vw 0 0;
-        font-size: .5em;
-    }
-}
-
-
-/* 태블릿용 */
-@media(min-width:510px) and (max-width:768px) {
-    .search{width: 50%;}
-    .category>li:hover .sub {
-        grid-template-columns: repeat(7,1fr);
-    }
-    
-
-}
 
 
 
