--- a/publish/common/css/reset.css
+++ b/publish/common/css/reset.css
@@ -38,11 +38,10 @@ time, mark, audio, video {
 
 body {
     line-height:1;
+    text-rendering: auto;
 }
 
-a {text-decoration: none; color: #2b2b2b;}
 ul,li {list-style: none;}
-.m_menu{display: none;}
 
 article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section { 
@@ -69,21 +68,21 @@ a {
     font-size:100%;
     vertical-align:baseline;
     background:transparent;
-    color: #333;
+    color: #2b2b2b;
     text-decoration: none;
 }
 
 /* change colours to suit your needs */
 ins {
     background-color:#ff9;
-    color:#000;
+    color:#2b2b2b;
     text-decoration:none;
 }
 
 /* change colours to suit your needs */
 mark {
     background-color:#ff9;
-    color:#000; 
+    color:#2b2b2b;
     font-style:italic;
     font-weight:bold;
 }
@@ -121,3 +120,4 @@ button{
     background-color: transparent;
     cursor: pointer;
 }
+
