--- a/publish/common/css/signup-login.css
+++ b/publish/common/css/signup-login.css
@@ -7,12 +7,11 @@ body{
   max-width: 600px;
   margin: 0 auto;
   padding: 3%;
-  border: 1px solid;
 }
 
 /* 로고 */
 .form_logo{
-  max-width: 180px;
+  max-width: 170px;
   margin: 0 auto 3% auto;
 }
 .form_logo img{width: 100%;}
@@ -144,6 +143,9 @@ textarea {
   display: block;
   width: 100%;
 }
+.hide{
+  display: none;
+}
 
 /* 아이디,비번찾기 */
 .find>a{
@@ -203,6 +205,24 @@ textarea {
 }
 .tab_group li.active{
   display: block;
+}
+
+
+@media(max-width:768px){
+  h2{font-size: 1rem;}
+  .button{font-size: 1rem;}
+  .hide{
+    display: block;
+    background-color: #fff;
+    color: #2b2b2b;
+    border: 1px solid #969696;
+  }
+  .test{display: none;}
+  .social{display: none;}
+  .find>a{font-size: .8rem;}
+  .tab_group li a {font-size: .8rem;}
+  .tab_group span{font-size: .8rem;}
+  
 }
 
 
