--- a/publish/common/css/common.css
+++ b/publish/common/css/common.css
@@ -323,9 +323,6 @@ i.sub_menu13 {background-position: -437px -82px;}
     justify-content: space-around;
     align-items: flex-start;
 }
-.main_con{
-    display: none;
-}
 .item_list{
     width: 100%;
     display: block;
@@ -335,10 +332,9 @@ i.sub_menu13 {background-position: -437px -82px;}
     position: relative;
 }
 .item_box>img{
-    width: 100%;
-    max-width: 232px;
-    height: 100%;
-    max-height: 232px;
+    width: 232px;
+    height: 232px;
+    object-fit: cover;
     border-radius: 3%;
     border: .5px solid #b6b6b6;
 }
@@ -514,7 +510,6 @@ i.sub_menu13 {background-position: -437px -82px;}
     color: #6f6e6e;
     padding: 5px 0;
 }
-
 
 
 
