--- a/publish/common/css/footer.css
+++ b/publish/common/css/footer.css
@@ -50,9 +50,8 @@
     display: flex;
     flex-direction: column;
     -webkit-flex-direction: column;
-    padding: 1% 0;
+    padding: 1%;
     font-style: normal;
-    padding: 0 1% ;
 }
 .footer_bottom>p,
 .footer_bottom>p>em{
