--- a/frontend/src/asset/css/boardList.css
+++ b/frontend/src/asset/css/boardList.css
@@ -136,3 +136,19 @@ ul.list {
     color: #4147e1;
     border: 2px solid #4147e1;
 }
+
+@media(min-width:500px) and (max-width:930px) {
+    .item {
+        width: 33.33%;
+    }
+}
+
+@media (max-width:500px) {
+    .more_load>a {
+        font-size: .8rem;
+    }
+
+    .item {
+        width: 50%;
+    }
+}
